[package]
name = "all_in_one_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = "=0.7.4"
pgx-macros = "0.7.4"
rand = "0.9.0"
serde = "1.0.117"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"  
base64 = "0.22.1"

[dev-dependencies]
pgx-tests = "=0.7.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
