[package]
name = "all_in_one_lib"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_all_in_one_lib"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg14"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
pgrx = { version ="0.15.0", default-features = false  }
pgrx-macros = "0.15.0" 
rand = "0.9.0"
serde = "1.0.218"
serde_json = "1.0.139"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.6"
hex = "0.4"
aes-gcm = "0.10"  
hostname = "0.4.1"
get_if_addrs = "0.5"
once_cell = "1.18"
csv = "1.3.1"
# redis = "0.29.5"

[dev-dependencies]
pgrx-tests = "0.15.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
